Pipeline/javax_xml_transform/javax_xml_transformOutputResult.txt
Sample: TransformerFactory_1
----------------------------------------------------------------
stdout:
com.sun.org.apache.xalan.internal.xsltc.trax.TransformerFactoryImpl@43a0cee9

================================================================

Sample: TransformerFactory_2
----------------------------------------------------------------
output:
./javax_xml_transform/javaFiles/TransformerFactory_2.java:7: error: unreported exception TransformerConfigurationException; must be caught or declared to be thrown
        Transformer transformer = factory.newTransformer();
                                                        ^
1 error


================================================================

